Fix bug that causes horizontal scroll to appear

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 html {
     box-sizing: border-box;
     color: #fdfcf4;
+    overflow-x: hidden;
 }
 
 *,
